# emotions_diary

./: .env.example  Dockerfile  db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml  reboot.sh
accounts/: admin.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_emotion_options_emotion_intensity.py  0003_auto_20241108_1425.py
accounts/templates/registration/: login.html  signup.html
emotions_diary/: asgi.py  settings.py  urls.py  views.py  wsgi.py
static/js/: emotion_chart.js
staticfiles/: staticfiles.json
staticfiles/js/: emotion_chart.396771b61936.js  emotion_chart.3a0b743be1f3.js
templates/: base.html  emotion_list.html  home.html  register_emotion.html
templatetags/: emotion_extras.py
