[tool.poetry]
name = "emotion-diary"
version = "0.1.0"
description = "Keep track of your emotions"
authors = ["Pablo Minué"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
django-allauth = "^65.1.0"
django-widget-tweaks = "^1.5.0"
dj-database-url = "^2.3.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
